Week4/application_load_balancer/terraform/vpc.tf
resource "aws_vpc" "main" {
	cidr_block = var.vpc_cidr
	enable_dns_support   = true
	enable_dns_hostnames = true
	tags = {
		Name = "alb-lab-vpc"
	}
}

resource "aws_internet_gateway" "main" {
	vpc_id = aws_vpc.main.id
	tags = {
		Name = "alb-lab-igw"
	}
}

resource "aws_subnet" "public" {
	count                   = length(var.public_subnets)
	vpc_id                  = aws_vpc.main.id
	cidr_block              = var.public_subnets[count.index]
	availability_zone       = var.availability_zones[count.index]
	map_public_ip_on_launch = true
	tags = {
		Name = "alb-lab-public-subnet-${count.index + 1}"
	}
}

resource "aws_route_table" "public" {
	vpc_id = aws_vpc.main.id
	tags = {
		Name = "alb-lab-public-rt"
	}
}

resource "aws_route" "internet_access" {
	route_table_id         = aws_route_table.public.id
	destination_cidr_block = "0.0.0.0/0"
	gateway_id             = aws_internet_gateway.main.id
}

resource "aws_route_table_association" "public" {
	count          = length(var.public_subnets)
	subnet_id      = aws_subnet.public[count.index].id
	route_table_id = aws_route_table.public.id
}
